selection code + display in notebook

--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -485,7 +485,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test selection"
+    "# Selection\n",
+    "\n",
+    "It consist of replacing some of the parents (individuals of the last generation) with some children (individuals go through crossover and mutations), to obtain a new generation.\n",
+    "\n",
+    "Several strategies are possible:\n",
+    "- Keeping the overall $N$ best individuals\n",
+    "- Replacing the $n$ worse parents by the $n$ best children\n",
+    "- Roulette wheel\n",
+    "- Tournament\n",
+    "\n",
+    "Here we will implement the 2nd one."
    ]
   },
   {
@@ -494,52 +504,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.array([[0,0],\n",
-    "              [0,1],\n",
-    "              [1,0],\n",
-    "              [1,1]])\n",
-    "scores = np.array([[0.5],\n",
-    "                   [1.2],\n",
-    "                   [0.1],\n",
-    "                   [5.2]])\n",
-    "afficher_population_et_scores(a,scores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "individus_selectiones = selection(a,scores)\n",
-    "print(individus_selectiones)"
+    "def indices_of_the_best(scores: np.ndarray, n: int) -> np.ndarray:\n",
+    "    original_indices = np.arange(scores.shape[0])\n",
+    "    sorting_indices = np.argsort(scores,0) # the indices sorting the scores\n",
+    "    sorted_original_indices = original_indices[sorting_indices[::-1]] # apply them on the original indices\n",
+    "    return sorted_original_indices[:n] # keep only the n^th first\n",
+    "\n",
+    "def indices_of_the_worse(scores: np.ndarray, n: int) -> np.ndarray:\n",
+    "    original_indices = np.arange(scores.shape[0])\n",
+    "    sorting_indices = np.argsort(scores,0) # the indices sorting the scores\n",
+    "    sorted_original_indices = original_indices[sorting_indices[::1]] # apply them on the original indices\n",
+    "    return sorted_original_indices[:n] # keep only the n^th first\n",
+    "\n",
+    "n = 10 # the 10 worse parents will be replaced by the 10 best children\n",
+    "\n",
+    "def selection(parents: np.ndarray, children: np.ndarray, n, display_diff: bool = False) -> np.ndarray:\n",
+    "    new_population = np.copy(parents)\n",
+    "\n",
+    "    # recompute the scores of the parents, because the crossover shuffled them\n",
+    "    parents_scores = evaluate_population(parents)\n",
+    "\n",
+    "    # compute the scores of the children\n",
+    "    children_scores = evaluate_population(children)\n",
+    "\n",
+    "    indices_of_worse_parents = indices_of_the_worse(parents_scores,n)\n",
+    "    indices_of_best_children = indices_of_the_best(children_scores,n)\n",
+    "\n",
+    "    if display_diff:\n",
+    "        # based on display_scores()\n",
+    "        table = Table(title=\"Parents\")\n",
+    "        table.add_column('Index')\n",
+    "        table.add_column('Chromosome')\n",
+    "        table.add_column('Score')\n",
+    "        for idx in range(0,parents.shape[0]):\n",
+    "            score_str = f'{parents_scores[idx,0]:0.2f}'\n",
+    "            table.add_row(\n",
+    "                str(idx),\n",
+    "                chromosome2str(parents[idx,:]),\n",
+    "                score_str if idx not in indices_of_worse_parents else ('[bright_red]'+score_str+'[/]')\n",
+    "            )\n",
+    "        console.print(table)\n",
+    "        table = Table(title=\"Children\")\n",
+    "        table.add_column('Index')\n",
+    "        table.add_column('Chromosome')\n",
+    "        table.add_column('Score')\n",
+    "        for idx in range(0,children.shape[0]):\n",
+    "            score_str = f'{children_scores[idx,0]:0.2f}'\n",
+    "            table.add_row(\n",
+    "                str(idx),\n",
+    "                chromosome2str(children[idx,:]),\n",
+    "                score_str if idx not in indices_of_best_children else ('[bright_green]'+score_str+'[/]')\n",
+    "            )\n",
+    "        console.print(table)\n",
+    "    \n",
+    "    # actual replacement\n",
+    "    for i in range(n):\n",
+    "        # replacement in the population of one of the worse parent\n",
+    "        # by one of the best child\n",
+    "        new_population[indices_of_worse_parents[i],:] = children[indices_of_best_children[i],:]\n",
+    "    return new_population\n",
+    "    # TODO also update & return scores?\n",
+    "\n",
+    "# replace `population` with the new population\n",
+    "population = selection(population,children,n,True)\n",
+    "scores = evaluate_population(population)\n",
+    "print('new population:')\n",
+    "display_scores(population,scores,console)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test `index_des_meilleurs`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scores2 = np.array([[0.5],#0\n",
-    "                    [1.2],#1\n",
-    "                    [0.1],#2\n",
-    "                    [5.2],#3\n",
-    "                    [0.7],#4\n",
-    "                    [0.9],#5\n",
-    "                    [4.0],#6\n",
-    "                    [3.1]])#7\n",
-    "meilleurs = index_des_meilleurs(scores2,4)\n",
-    "pires = index_des_pires(scores2,5)\n",
-    "print(\"meilleurs=\",meilleurs)\n",
-    "print(\"pires=\",pires)"
+    "---"
    ]
   },
   {
