--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -567,9 +567,18 @@
     "\n",
     "# replace `population` with the new population\n",
     "population = selection(population,children,n,True)\n",
+    "generation = 1\n",
     "scores = evaluate_population(population)\n",
     "print('new population:')\n",
-    "display_scores(population,scores,console)"
+    "display_scores(population,scores,console)\n",
+    "\n",
+    "# plot the new population (generation 1)\n",
+    "fig = plot_population(x,y,population)\n",
+    "fig.update_layout(title_text=f'Generation {generation}')\n",
+    "fig.show()\n",
+    "\n",
+    "if EXPORT_FIGURES:\n",
+    "    fig.write_image(f'generation_{generation}.png')"
    ]
   },
   {
