functions to compute score stats + display them

--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -25,6 +25,7 @@
     "from rich.table import Table\n",
     "from rich.theme import Theme\n",
     "from rich.console import Console\n",
+    "from rich.panel import Panel\n",
     "from icecream import ic\n",
     "\n",
     "from fonctions import * # TODO remove by moving content in the notebook\n",
@@ -287,8 +288,23 @@
     "        )\n",
     "    console.print(table)\n",
     "\n",
+    "def compute_stats(values: np.ndarray) -> tuple[float,float,float]:\n",
+    "    return values.mean(), values.max(), values.std()\n",
+    "\n",
+    "def print_generation_stats(mean: float, max: float, std: float):\n",
+    "    console.print(\n",
+    "        Panel.fit(\n",
+    "            f'mean score = {mean:0.2f}\\n' +\n",
+    "            f'best score = {max:0.2f}\\n' +\n",
+    "            f' std. dev. = {std:0.2f}',\n",
+    "            title=f'Score stats'\n",
+    "        )\n",
+    "    )\n",
+    "\n",
     "# display the scores of the initial population\n",
-    "display_scores(population,scores,console)"
+    "display_scores(population,scores,console)\n",
+    "mean, max, std = compute_stats(scores)\n",
+    "print_generation_stats(mean,max,std)"
    ]
   },
   {
@@ -566,11 +582,28 @@
     "    # TODO also update & return scores?\n",
     "\n",
     "# replace `population` with the new population\n",
-    "population = selection(population,children,n,True)\n",
+    "population = selection(population,children,n,True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluate and plot the new generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "generation = 1\n",
     "scores = evaluate_population(population)\n",
     "print('new population:')\n",
     "display_scores(population,scores,console)\n",
+    "mean, max, std = compute_stats(scores)\n",
+    "print_generation_stats(mean,max,std)\n",
     "\n",
     "# plot the new population (generation 1)\n",
     "fig = plot_population(x,y,population)\n",
