add optimisation loop in notebook

--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -231,7 +231,8 @@
     "                       [0,1,1,0,1,1,1,0],\n",
     "                       [1,0,0,0,0,1,1,1],\n",
     "                       [1,1,1,1,0,0,1,0],\n",
-    "                       [1,0,0,0,0,0,0,0]], dtype=int)"
+    "                       [1,0,0,0,0,0,0,0]], dtype=int)\n",
+    "generation = 0"
    ]
   },
   {
@@ -247,7 +248,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "population = rng.integers(low=0, high=2, size=(20,8))"
+    "population = rng.integers(low=0, high=2, size=(20,8))\n",
+    "generation = 0"
    ]
   },
   {
@@ -321,7 +323,7 @@
    "outputs": [],
    "source": [
     "# define how to plot a given population\n",
-    "def plot_population(x,y,population) -> go.Figure:\n",
+    "def plot_population(x,y,population,generation) -> go.Figure:\n",
     "    fig = plot_objective_function(x,y)\n",
     "    x_population = np.apply_along_axis((lambda x: float(gc2dec(x))), axis=1, arr=population)\n",
     "    y_population = function_to_minimize(x_population)\n",
@@ -334,15 +336,15 @@
     "        name='individuals'\n",
     "    ))\n",
     "    fig.layout.update(showlegend=False) # remove legend\n",
+    "    fig.update_layout(title_text=f'Generation {generation}')\n",
     "    return fig\n",
     "\n",
     "# plot the initial population\n",
-    "fig = plot_population(x,y,population)\n",
-    "fig.update_layout(title_text='Initial population')\n",
+    "fig = plot_population(x,y,population,generation)\n",
     "fig.show()\n",
     "\n",
     "if EXPORT_FIGURES:\n",
-    "    fig.write_image(\"initial_population.png\")"
+    "    fig.write_image(f'generation_{generation}.png')"
    ]
   },
   {
@@ -476,7 +478,7 @@
    "source": [
     "mutation_probability = 0.08\n",
     "\n",
-    "def population_mutation(population: np.ndarray, mutation_probability: float, rng: np.random.Generator, display_mutations: bool = False) -> np.ndarray:\n",
+    "def population_mutation(population: np.ndarray, mutation_probability: float, rng: np.random.Generator, display_mutations: bool = False):\n",
     "    to_print = ''\n",
     "    for idx in range(population.shape[0]):\n",
     "        if display_mutations:\n",
@@ -598,7 +600,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generation = 1\n",
+    "generation += 1\n",
     "scores = evaluate_population(population)\n",
     "print('new population:')\n",
     "display_scores(population,scores,console)\n",
@@ -606,8 +608,7 @@
     "print_generation_stats(mean,max,std)\n",
     "\n",
     "# plot the new population (generation 1)\n",
-    "fig = plot_population(x,y,population)\n",
-    "fig.update_layout(title_text=f'Generation {generation}')\n",
+    "fig = plot_population(x,y,population,generation)\n",
     "fig.show()\n",
     "\n",
     "if EXPORT_FIGURES:\n",
@@ -618,7 +619,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
+    "# Putting it all together: optimisation loop\n",
+    "\n",
+    "We need to define the stopping criterion: convergence, or max number of generation reached.\n",
+    "\n",
+    "The convergence can be defined as a low standard deviation of the scores."
    ]
   },
   {
@@ -627,22 +632,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proba_croisement = 0.8\n",
-    "proba_mutation = 0.08\n",
+    "target_std = 0.01\n",
     "max_generations = 100\n",
-    "nb_individus_remplaces = 5\n",
-    "afficher_etapes = True\n",
-    "afficher_evolution_du_score = True\n",
-    "scores_moyens = np.zeros((1,max_generations+1))\n",
-    "meilleurs_scores = np.zeros((1,max_generations+1))\n",
-    "boucle_optimisation(population,proba_croisement,proba_mutation,max_generations,nb_individus_remplaces,afficher_etapes,afficher_evolution_du_score,scores_moyens,meilleurs_scores)"
+    "\n",
+    "while std > target_std and generation <= max_generations:\n",
+    "    clear_output(wait=True) # lazy way to \"overwrite\" the output each generation but makes the output blink\n",
+    "    children = population_crossover(population,crossover_probability,rng)\n",
+    "    population_mutation(children,mutation_probability,rng)\n",
+    "    population = selection(population,children,10)\n",
+    "    generation += 1\n",
+    "    scores = evaluate_population(population)\n",
+    "    display_scores(population,scores,console)\n",
+    "    mean, max, std = compute_stats(scores)\n",
+    "    print_generation_stats(mean,max,std)\n",
+    "    fig = plot_population(x,y,population,generation)\n",
+    "    fig.show()\n",
+    "\n",
+    "    if EXPORT_FIGURES:\n",
+    "        fig.write_image(f'generation_{generation}.png')\n",
+    "\n",
+    "best_score_index = np.argmax(scores)\n",
+    "best_score_input = population[best_score_index,:]\n",
+    "best_score_value = scores[best_score_index,0]\n",
+    "print(f\"The best score is {best_score_value:0.2f} (f(x)={-best_score_value:0.2f}) at x = {chromosome2str(best_score_input)} = {gc2dec(best_score_input)}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then to obain a GIF of the evolving population, with [Gifski](https://github.com/ImageOptim/gifski/) :\n",
+    "Then to obain a GIF of the evolving population from the `generation_*.png` images, with [Gifski](https://github.com/ImageOptim/gifski/) :\n",
     "```bash\n",
     "gifski -o anim.gif generation_*.png --fps 4\n",
     "```"
