duplicate last frame of the GIF

--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -27,6 +27,7 @@
     "from rich.console import Console\n",
     "from rich.panel import Panel\n",
     "from icecream import ic\n",
+    "from shutil import copyfile\n",
     "\n",
     "from fonctions import * # TODO remove by moving content in the notebook\n",
     "\n",
@@ -650,6 +651,13 @@
     "\n",
     "    if EXPORT_FIGURES:\n",
     "        fig.write_image(f'generation_{generation}.png')\n",
+    "    \n",
+    "# GIF export: add frames for the last generation\n",
+    "if EXPORT_FIGURES:\n",
+    "    copyfile(f'generation_{generation}.png',f'generation_{generation+1}.png')\n",
+    "    copyfile(f'generation_{generation}.png',f'generation_{generation+2}.png')\n",
+    "    copyfile(f'generation_{generation}.png',f'generation_{generation+3}.png')\n",
+    "    copyfile(f'generation_{generation}.png',f'generation_{generation+4}.png')\n",
     "\n",
     "best_score_index = np.argmax(scores)\n",
     "best_score_input = population[best_score_index,:]\n",
