compare decimal & Gray code on successive numbers

--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -129,6 +129,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def dec2bin(dec,N):\n",
+    "    \"\"\"\n",
+    "    Decimal to Binary conversion\n",
+    "    \"\"\"\n",
+    "    # convert to string with bin(), remove '0b', pad with '0's for fixed width\n",
+    "    binary = '{:0>{width}}'.format(bin(dec)[2:], 'b', width=N)\n",
+    "    # separate chars with ' ' and use this separator to get an int array\n",
+    "    return np.fromstring(\" \".join(binary),dtype=int,sep=\" \")\n",
+    "\n",
+    "def bin2dec(bin):\n",
+    "    \"\"\"\n",
+    "    Binary to decimal conversion\n",
+    "    \"\"\"\n",
+    "    #create a string from the array\n",
+    "    bin = np.array2string(bin, separator='')[1:-1] # remove leading and trailing square brackets\n",
+    "    return int(bin,base=2)\n",
+    "\n",
     "# https://www.geeksforgeeks.org/decimal-equivalent-gray-code-inverse/\n",
     "\n",
     "def dec2gc(dec,N):\n",
@@ -147,35 +164,13 @@
     "    Gray code to decimal conversion\n",
     "    \"\"\"\n",
     "    #create a string from the array\n",
-    "    gc = np.array2string(gc, separator='')[1:-1]\n",
+    "    gc = np.array2string(gc, separator='')[1:-1] # remove leading and trailing square brackets\n",
     "    gc = int(gc,base=2)\n",
     "    inv = 0\n",
     "    while(gc):\n",
     "        inv = inv ^ gc\n",
     "        gc = gc >> 1\n",
     "    return inv"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Test the conversion functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "decimal_value = np.random.randint(0,2**8) # random 8 bits integer\n",
-    "gray_code = dec2gc(decimal_value,8)\n",
-    "print(f\"The Gray code (on 8 bits) of {decimal_value} is\\n{gray_code}\\n\")\n",
-    "back_to_decimal = gc2dec(gray_code)\n",
-    "print(f\"The decimal value of\\n{gray_code} is {back_to_decimal}\")\n",
-    "assert(back_to_decimal == decimal_value)"
    ]
   },
   {
@@ -192,8 +187,41 @@
    "outputs": [],
    "source": [
     "chromosome2str = lambda chromosome: ''.join([str(allele) for allele in chromosome]) # `chromosome` being a numpy array of int (row of `population` defined below)\n",
+    "# or use `np.array2string(gc, separator='')[1:-1]` instead?\n",
     "\n",
-    "chromosome2str(gray_code)"
+    "chromosome2str(np.array([1,1,0,1,0,0,0,1],dtype=int))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test the conversion functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "decimal_value = 95\n",
+    "binary_value = dec2bin(decimal_value,8)\n",
+    "gray_code = dec2gc(decimal_value,8)\n",
+    "print(f\"{decimal_value} has {chromosome2str(binary_value)} as binary value\\n\")\n",
+    "print(f\"   and {chromosome2str(gray_code)} as Gray code\\n\")\n",
+    "\n",
+    "# test inverse conversion\n",
+    "back_to_decimal = gc2dec(gray_code)\n",
+    "assert(back_to_decimal == decimal_value)\n",
+    "back_to_decimal = bin2dec(binary_value)\n",
+    "assert(back_to_decimal == decimal_value)\n",
+    "\n",
+    "decimal_value += 1\n",
+    "binary_value = dec2bin(decimal_value,8)\n",
+    "gray_code = dec2gc(decimal_value,8)\n",
+    "print(f\"{decimal_value} has {chromosome2str(binary_value)} as binary value\\n\")\n",
+    "print(f\"   and {chromosome2str(gray_code)} as Gray code\\n\")"
    ]
   },
   {
