colored bitwise comparison binary vs Gray code

--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -205,23 +205,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "decimal_value = 95\n",
-    "binary_value = dec2bin(decimal_value,8)\n",
-    "gray_code = dec2gc(decimal_value,8)\n",
-    "print(f\"{decimal_value} has {chromosome2str(binary_value)} as binary value\\n\")\n",
-    "print(f\"   and {chromosome2str(gray_code)} as Gray code\\n\")\n",
+    "decimal_value_1 = 95\n",
+    "binary_value_1 = dec2bin(decimal_value_1,8)\n",
+    "gray_code_1 = dec2gc(decimal_value_1,8)\n",
+    "console.print(f'{decimal_value_1} has {chromosome2str(binary_value_1)} as binary value\\n   and {chromosome2str(gray_code_1)} as Gray code')\n",
     "\n",
     "# test inverse conversion\n",
-    "back_to_decimal = gc2dec(gray_code)\n",
-    "assert(back_to_decimal == decimal_value)\n",
-    "back_to_decimal = bin2dec(binary_value)\n",
-    "assert(back_to_decimal == decimal_value)\n",
+    "back_to_decimal = gc2dec(gray_code_1)\n",
+    "assert(back_to_decimal == decimal_value_1)\n",
+    "back_to_decimal = bin2dec(binary_value_1)\n",
+    "assert(back_to_decimal == decimal_value_1)\n",
     "\n",
-    "decimal_value += 1\n",
-    "binary_value = dec2bin(decimal_value,8)\n",
-    "gray_code = dec2gc(decimal_value,8)\n",
-    "print(f\"{decimal_value} has {chromosome2str(binary_value)} as binary value\\n\")\n",
-    "print(f\"   and {chromosome2str(gray_code)} as Gray code\\n\")"
+    "decimal_value_2 = decimal_value_1+1\n",
+    "binary_value_2 = dec2bin(decimal_value_2,8)\n",
+    "gray_code_2 = dec2gc(decimal_value_2,8)\n",
+    "to_print = f'{decimal_value_2} has '\n",
+    "for gene in range(8):\n",
+    "    if binary_value_2[gene] != binary_value_1[gene]:\n",
+    "        to_print += f'[b][bright_magenta]{binary_value_2[gene]}[/][/]'\n",
+    "    else:\n",
+    "        to_print += str(binary_value_2[gene])\n",
+    "to_print += ' as binary value\\n   and '\n",
+    "for gene in range(8):\n",
+    "    if gray_code_2[gene] != gray_code_1[gene]:\n",
+    "        to_print += f'[b][bright_magenta]{gray_code_2[gene]}[/][/]'\n",
+    "    else:\n",
+    "        to_print += str(gray_code_2[gene])\n",
+    "to_print += ' as Gray code'\n",
+    "console.print(to_print)\n",
+    "\n",
+    "# test inverse conversion\n",
+    "back_to_decimal = gc2dec(gray_code_2)\n",
+    "assert(back_to_decimal == decimal_value_2)\n",
+    "back_to_decimal = bin2dec(binary_value_2)\n",
+    "assert(back_to_decimal == decimal_value_2)"
    ]
   },
   {
