parametric images extension

--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -54,7 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EXPORT_FIGURES = True"
+    "EXPORT_FIGURES = True\n",
+    "IMAGES_EXT = \"png\""
    ]
   },
   {
@@ -101,7 +102,7 @@
     "fig.show()\n",
     "\n",
     "if EXPORT_FIGURES:\n",
-    "    fig.write_image(\"function_to_minimize.png\")\n",
+    "    fig.write_image(\"function_to_minimize.\" + IMAGES_EXT)\n",
     "\n",
     "print(f\"The minimum is {np.min(y):0.2f} at x={np.argmin(y)}\")"
    ]
@@ -390,7 +391,7 @@
     "fig.show()\n",
     "\n",
     "if EXPORT_FIGURES:\n",
-    "    fig.write_image(f'generation_{generation}.png')"
+    "    fig.write_image(f'generation_{generation}.' + IMAGES_EXT)"
    ]
   },
   {
@@ -658,7 +659,7 @@
     "fig.show()\n",
     "\n",
     "if EXPORT_FIGURES:\n",
-    "    fig.write_image(f'generation_{generation}.png')"
+    "    fig.write_image(f'generation_{generation}.' + IMAGES_EXT)"
    ]
   },
   {
@@ -695,14 +696,14 @@
     "    fig.show()\n",
     "\n",
     "    if EXPORT_FIGURES:\n",
-    "        fig.write_image(f'generation_{generation}.png')\n",
+    "        fig.write_image(f'generation_{generation}.' + IMAGES_EXT)\n",
     "    \n",
     "# GIF export: add frames for the last generation\n",
     "if EXPORT_FIGURES:\n",
-    "    copyfile(f'generation_{generation}.png',f'generation_{generation+1}.png')\n",
-    "    copyfile(f'generation_{generation}.png',f'generation_{generation+2}.png')\n",
-    "    copyfile(f'generation_{generation}.png',f'generation_{generation+3}.png')\n",
-    "    copyfile(f'generation_{generation}.png',f'generation_{generation+4}.png')\n",
+    "    copyfile(f'generation_{generation}.' + IMAGES_EXT, f'generation_{generation+1}.' + IMAGES_EXT)\n",
+    "    copyfile(f'generation_{generation}.' + IMAGES_EXT, f'generation_{generation+2}.' + IMAGES_EXT)\n",
+    "    copyfile(f'generation_{generation}.' + IMAGES_EXT, f'generation_{generation+3}.' + IMAGES_EXT)\n",
+    "    copyfile(f'generation_{generation}.' + IMAGES_EXT, f'generation_{generation+4}.' + IMAGES_EXT)\n",
     "\n",
     "best_score_index = np.argmax(scores)\n",
     "best_score_input = population[best_score_index,:]\n",
