--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -243,43 +243,7 @@
     "\n",
     "The population is stored as a $N ~ \\text{individuals} \\times 8 ~ \\text{genes}$ matrix. Here $N=20$.\n",
     "\n",
-    "Option A : pre-generated random individuals"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "population = np.array([[1,1,0,1,0,0,0,1],\n",
-    "                       [1,0,0,0,1,1,1,1],\n",
-    "                       [0,1,1,1,1,0,0,0],\n",
-    "                       [1,1,1,1,1,1,1,1],\n",
-    "                       [1,1,0,1,1,0,1,0],\n",
-    "                       [0,1,0,1,0,1,1,0],\n",
-    "                       [0,1,0,1,1,0,0,0],\n",
-    "                       [1,0,1,0,1,1,0,0],\n",
-    "                       [1,1,1,0,0,1,0,0],\n",
-    "                       [1,0,1,0,1,1,1,0],\n",
-    "                       [0,1,0,1,0,0,0,0],\n",
-    "                       [1,0,1,0,0,0,1,0],\n",
-    "                       [1,0,1,1,1,0,0,1],\n",
-    "                       [0,0,0,0,1,1,0,1],\n",
-    "                       [1,0,0,1,1,0,0,0],\n",
-    "                       [0,1,0,0,0,1,0,0],\n",
-    "                       [0,1,1,0,1,1,1,0],\n",
-    "                       [1,0,0,0,0,1,1,1],\n",
-    "                       [1,1,1,1,0,0,1,0],\n",
-    "                       [1,0,0,0,0,0,0,0]], dtype=int)\n",
-    "generation = 0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Option B : populate the initial population with random individuals"
+    "Let's populate the initial population with random individuals :"
    ]
   },
   {
