show score stats in figure titles

--- a/1D_example/1D_example.ipynb
+++ b/1D_example/1D_example.ipynb
@@ -297,20 +297,20 @@
     "def compute_stats(values: np.ndarray) -> tuple[float,float,float]:\n",
     "    return values.mean(), values.max(), values.std()\n",
     "\n",
-    "def print_generation_stats(mean: float, max: float, std: float):\n",
+    "def print_generation_stats(mean: float, max: float, std_dev: float):\n",
     "    console.print(\n",
     "        Panel.fit(\n",
     "            f'mean score = {mean:0.3f}\\n' +\n",
     "            f'best score = {max:0.3f}\\n' +\n",
-    "            f' std. dev. = {std:0.3f}',\n",
+    "            f' std. dev. = {std_dev:0.3f}',\n",
     "            title=f'Score stats'\n",
     "        )\n",
     "    )\n",
     "\n",
     "# display the scores of the initial population\n",
     "display_scores(population,scores,console)\n",
-    "mean, max, std = compute_stats(scores)\n",
-    "print_generation_stats(mean,max,std)"
+    "mean, max, std_dev = compute_stats(scores)\n",
+    "print_generation_stats(mean,max,std_dev)"
    ]
   },
   {
@@ -327,7 +327,7 @@
    "outputs": [],
    "source": [
     "# define how to plot a given population\n",
-    "def plot_population(x,y,population,generation) -> go.Figure:\n",
+    "def plot_population(x,y,population,generation,score_mean,score_max,score_std_dev) -> go.Figure:\n",
     "    fig = plot_objective_function(x,y)\n",
     "    x_population = np.apply_along_axis((lambda x: float(gc2dec(x))), axis=1, arr=population)\n",
     "    y_population = function_to_minimize(x_population)\n",
@@ -340,11 +340,11 @@
     "        name='individuals'\n",
     "    ))\n",
     "    fig.layout.update(showlegend=False) # remove legend\n",
-    "    fig.update_layout(title_text=f'Generation {generation}')\n",
+    "    fig.update_layout(title_text=f'Generation {generation}   -   scores : avg = {score_mean:0.3f}, max = {score_max:0.3f}, sd = {score_std_dev:0.3f}')\n",
     "    return fig\n",
     "\n",
     "# plot the initial population\n",
-    "fig = plot_population(x,y,population,generation)\n",
+    "fig = plot_population(x,y,population,generation,mean,max,std_dev)\n",
     "fig.show()\n",
     "\n",
     "if EXPORT_FIGURES:\n",
@@ -609,10 +609,9 @@
     "print('new population:')\n",
     "display_scores(population,scores,console)\n",
     "mean, max, std = compute_stats(scores)\n",
-    "print_generation_stats(mean,max,std)\n",
     "\n",
     "# plot the new population (generation 1)\n",
-    "fig = plot_population(x,y,population,generation)\n",
+    "fig = plot_population(x,y,population,generation,mean,max,std)\n",
     "fig.show()\n",
     "\n",
     "if EXPORT_FIGURES:\n",
@@ -640,7 +639,6 @@
     "max_generations = 100\n",
     "\n",
     "while std > target_std and generation <= max_generations:\n",
-    "    clear_output(wait=True) # lazy way to \"overwrite\" the output each generation but makes the output blink\n",
     "    children = population_crossover(population,crossover_probability,rng)\n",
     "    population_mutation(children,mutation_probability,rng)\n",
     "    population = selection(population,children,10)\n",
@@ -648,8 +646,7 @@
     "    scores = evaluate_population(population)\n",
     "    display_scores(population,scores,console)\n",
     "    mean, max, std = compute_stats(scores)\n",
-    "    print_generation_stats(mean,max,std)\n",
-    "    fig = plot_population(x,y,population,generation)\n",
+    "    fig = plot_population(x,y,population,generation,mean,max,std)\n",
     "    fig.show()\n",
     "\n",
     "    if EXPORT_FIGURES:\n",
